--- a/Dashboard.html
+++ b/Dashboard.html
@@ -103,7 +103,7 @@
     <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
     import { getDatabase, ref, onValue } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
-    import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
+    import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
 
     const firebaseConfig = {
         apiKey: "AIzaSyCSADfQpAWpCbB8Idf3Eu94kMeO-7QX4aQ",
@@ -119,11 +119,32 @@
     const auth = getAuth(app);
     const db = getDatabase(app);
 
+    // --- AUTH OBSERVER: Redirect if not logged in ---
     onAuthStateChanged(auth, (user) => {
         if (!user) window.location.href = 'index.html';
     });
 
-    // Helper to get today's date in YYYY-MM-DD format
+    // --- FUNCTION: Logout Logic ---
+    const handleLogout = () => {
+        if (confirm("Are you sure you want to log out?")) {
+            signOut(auth)
+                .then(() => {
+                    console.log("User signed out.");
+                    window.location.href = 'index.html';
+                })
+                .catch((error) => {
+                    alert("Error logging out: " + error.message);
+                });
+        }
+    };
+
+    // --- EVENT LISTENER: Attach logout to button ---
+    document.getElementById('logoutBtn').addEventListener('click', (e) => {
+        e.preventDefault(); // Prevent page jump from '#' link
+        handleLogout();
+    });
+
+    // --- HELPER: Get today's date in YYYY-MM-DD format ---
     function getTodayDate() {
         const today = new Date();
         const yyyy = today.getFullYear();
@@ -132,7 +153,8 @@
         return `${yyyy}-${mm}-${dd}`;
     }
 
-   function loadTodayAttendance() {
+    // --- FUNCTION: Load Today's Attendance and Stats ---
+    function loadTodayAttendance() {
         const todayStr = getTodayDate();
         const attendanceRef = ref(db, `attendance/${todayStr}`);
 
@@ -182,47 +204,35 @@
         });
     }
 
-    loadTodayAttendance();
-
-    // Dropdown Menu Logic
+    // --- UI FUNCTION: Toggle Dropdown Menu ---
     window.toggleMenu = () => document.getElementById("myDropdown").classList.toggle("show");
 
+    // --- FUNCTION: Start the Live Date & Clock ---
     function startLiveClock() {
-    const clockElement = document.getElementById('liveClock');
+        const clockElement = document.getElementById('liveClock');
 
-    function updateTime() {
-        const now = new Date();
-        
-        // Options for formatting
-        const dateOptions = { 
-            weekday: 'long', 
-            year: 'numeric', 
-            month: 'long', 
-            day: 'numeric' 
-        };
-        const timeOptions = { 
-            hour: '2-digit', 
-            minute: '2-digit', 
-            second: '2-digit', 
-            hour12: true 
-        };
+        function updateTime() {
+            const now = new Date();
+            const dateOptions = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+            const timeOptions = { hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
 
-        const dateStr = now.toLocaleDateString(undefined, dateOptions);
-        const timeStr = now.toLocaleTimeString(undefined, timeOptions);
+            const dateStr = now.toLocaleDateString(undefined, dateOptions);
+            const timeStr = now.toLocaleTimeString(undefined, timeOptions);
+            clockElement.innerHTML = `${dateStr} | ${timeStr}`;
+        }
 
-        clockElement.innerHTML = `${dateStr} | ${timeStr}`;
+        setInterval(updateTime, 1000);
+        updateTime();
     }
 
-    setInterval(updateTime, 1000); // Update every 1 second
-    updateTime(); // Run immediately on load
-}
-
-// Call the clock function
-startLiveClock();
+    // --- INITIALIZE DASHBOARD ---
+    loadTodayAttendance();
+    startLiveClock();
 </script>
 </body>
 
 </html>
+
 
 
 
