--- a/Dashboard.html
+++ b/Dashboard.html
@@ -7,9 +7,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="StyleSheet/Dashboard.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
+    <style>
+    #toast-container { position: fixed; top: 20px; right: 20px; z-index: 1000; }
+    .toast { 
+        padding: 12px 20px; border-radius: 8px; color: #fff; margin-bottom: 10px;
+        display: flex; align-items: center; gap: 10px; font-family: sans-serif;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.2); animation: slideIn 0.3s forwards;
+    }
+    .success { background: #008080; }
+    .error { background: #e74c3c; }
+    .info { background: #3498db; }
+    @keyframes slideIn { from { transform: translateX(100%); } to { transform: translateX(0); } }
+    @keyframes fadeOut { to { opacity: 0; transform: translateY(-20px); } }
+</style>
 </head>
 <body>
-
+<div id="toast-container"></div>
    <div class="sidebar">
     <div class="sidebar-header">
         <div class="profile-container">
@@ -99,8 +112,8 @@
             </table>
         </div>
     </div>
-
-    <script type="module">
+    
+<script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
     import { getDatabase, ref, onValue } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
     import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
@@ -119,119 +132,81 @@
     const auth = getAuth(app);
     const db = getDatabase(app);
 
-    // --- AUTH OBSERVER: Redirect if not logged in ---
+    // --- NEW: TOAST NOTIFICATION UTILITY ---
+    const notify = (msg, type = 'success') => {
+        const toast = document.createElement('div');
+        toast.className = `toast ${type}`;
+        toast.innerHTML = `<i class="fas fa-${type === 'success' ? 'check' : 'exclamation'}-circle"></i> ${msg}`;
+        document.getElementById('toast-container').appendChild(toast);
+        setTimeout(() => {
+            toast.style.animation = 'fadeOut 0.5s forwards';
+            setTimeout(() => toast.remove(), 500);
+        }, 3000);
+    };
+
+    // --- AUTH OBSERVER ---
     onAuthStateChanged(auth, (user) => {
         if (!user) window.location.href = 'index.html';
     });
 
-    // --- FUNCTION: Logout Logic ---
+    // --- UPDATED: LOGOUT WITH TOAST ---
     const handleLogout = () => {
         if (confirm("Are you sure you want to log out?")) {
-            signOut(auth)
-                .then(() => {
-                    console.log("User signed out.");
-                    window.location.href = 'index.html';
-                })
-                .catch((error) => {
-                    alert("Error logging out: " + error.message);
-                });
+            signOut(auth).then(() => {
+                notify("Logging out... Redirecting", "info");
+                setTimeout(() => window.location.href = 'index.html', 1500);
+            }).catch(err => notify(err.message, "error"));
         }
     };
 
-    // --- EVENT LISTENER: Attach logout to button ---
     document.getElementById('logoutBtn').addEventListener('click', (e) => {
-        e.preventDefault(); // Prevent page jump from '#' link
+        e.preventDefault();
         handleLogout();
     });
 
-    // --- HELPER: Get today's date in YYYY-MM-DD format ---
+    // --- ATTENDANCE & CLOCK LOGIC (Keeping your existing logic) ---
     function getTodayDate() {
-        const today = new Date();
-        const yyyy = today.getFullYear();
-        const mm = String(today.getMonth() + 1).padStart(2, '0');
-        const dd = String(today.getDate()).padStart(2, '0');
-        return `${yyyy}-${mm}-${dd}`;
+        const d = new Date();
+        return `${d.getFullYear()}-${String(d.getMonth() + 1).padStart(2, '0')}-${String(d.getDate()).padStart(2, '0')}`;
     }
 
-    // --- FUNCTION: Load Today's Attendance and Stats ---
     function loadTodayAttendance() {
-        const todayStr = getTodayDate();
-        const attendanceRef = ref(db, `attendance/${todayStr}`);
-
-        onValue(attendanceRef, (snapshot) => {
+        onValue(ref(db, `attendance/${getTodayDate()}`), (snap) => {
             const tbody = document.getElementById('studentTableBody');
-            let late = 0, absent = 0, present = 0;
-
-            if (snapshot.exists()) {
-                const records = snapshot.val();
+            let [l, a, p] = [0, 0, 0];
+            if (snap.exists()) {
                 let html = '';
-
-                Object.keys(records).forEach((key) => {
-                    const data = records[key];
-                    let statusClass = '';
-                    
-                    if (data.status === "PRESENT") {
-                        present++;
-                        statusClass = 'status-present';
-                    } else if (data.status === "LATE") {
-                        late++;
-                        statusClass = 'status-late';
-                    } else if (data.status === "ABSENT") {
-                        absent++;
-                        statusClass = 'status-absent';
-                    }
-
-                    html += `
-                        <tr>
-                            <td>${data.name}</td>
-                            <td>${data.email || 'N/A'}</td>
-                            <td>${data.studentID}</td>
-                            <td>${data.yearLevel || 'N/A'}</td>
-                            <td>${data.section || 'N/A'}</td>
-                            <td><span class="${statusClass}">${data.status}</span></td>
-                        </tr>
-                    `;
+                Object.values(snap.val()).forEach(d => {
+                    if (d.status === "PRESENT") p++; else if (d.status === "LATE") l++; else a++;
+                    html += `<tr><td>${d.name}</td><td>${d.email || 'N/A'}</td><td>${d.studentID}</td><td>${d.yearLevel || 'N/A'}</td><td>${d.section || 'N/A'}</td><td><span class="status-${d.status.toLowerCase()}">${d.status}</span></td></tr>`;
                 });
-
                 tbody.innerHTML = html;
             } else {
-                tbody.innerHTML = `<tr><td colspan="6" style="text-align:center;">No attendance records found for today (${todayStr}).</td></tr>`;
+                tbody.innerHTML = `<tr><td colspan="6" style="text-align:center;">No records for today.</td></tr>`;
             }
-
-            document.getElementById('lateCount').textContent = late;
-            document.getElementById('absentCount').textContent = absent;
-            document.getElementById('presentCount').textContent = present;
+            document.getElementById('lateCount').textContent = l;
+            document.getElementById('absentCount').textContent = a;
+            document.getElementById('presentCount').textContent = p;
         });
     }
 
-    // --- UI FUNCTION: Toggle Dropdown Menu ---
-    window.toggleMenu = () => document.getElementById("myDropdown").classList.toggle("show");
-
-    // --- FUNCTION: Start the Live Date & Clock ---
     function startLiveClock() {
-        const clockElement = document.getElementById('liveClock');
-
-        function updateTime() {
+        const el = document.getElementById('liveClock');
+        setInterval(() => {
             const now = new Date();
-            const dateOptions = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-            const timeOptions = { hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
-
-            const dateStr = now.toLocaleDateString(undefined, dateOptions);
-            const timeStr = now.toLocaleTimeString(undefined, timeOptions);
-            clockElement.innerHTML = `${dateStr} | ${timeStr}`;
-        }
-
-        setInterval(updateTime, 1000);
-        updateTime();
+            el.innerHTML = `${now.toLocaleDateString(undefined, {weekday:'long', year:'numeric', month:'long', day:'numeric'})} | ${now.toLocaleTimeString()}`;
+        }, 1000);
     }
 
-    // --- INITIALIZE DASHBOARD ---
+    // INITIALIZE
+    window.toggleMenu = () => document.getElementById("myDropdown").classList.toggle("show");
     loadTodayAttendance();
     startLiveClock();
 </script>
 </body>
 
 </html>
+
 
 
 
